# tech-challenge-01

./: .env.example  .gitignore  .pre-commit-config.yaml  .rest  Dockerfile  README.md  docker-compose.yml  dockerfile.server  main.tf  pyproject.toml  variables.tf
.github/workflows/: aws.yml  block-delete.yml  block-push.yml  deployment.yml  main.yml  pull-request.yaml  pull.yml  python-CI.yml
infra/: deployment.yaml  hpa.yaml  metrics.yaml  mongo.yaml  pv.yaml  pvc.yaml  services.yaml
k8s-fiap/: README.md  deployment.yaml  hpa.yaml  metrics.yaml  mongo.yaml  pv.yaml  pvc.yaml  services.yaml
k8s-fiap/fastapi/: Dockerfile  mypy.ini
src/: index.py
src/api/: base_router.py
src/api/v1/: customers_router.py  notifications_router.py  orders_router.py  payments_router.py  v1_router.py
src/config/injector/: container.py  modules.py
src/config/mercado_pago/: config.py
src/controllers/: notifications_controller.py  orders_controller.py  payments_controller.py  products_controller.py
src/core/utils/: validate_cpf.py  validate_email.py
src/entities/: order.py  payment.py
src/excecptions/: application_exceptions.py
src/interfaces/providers/: payments_provider.py
src/interfaces/repositories/: customers_repository.py  orders_repository.py  payments_repository.py
src/server/: index.py
src/types/dtos/: create_customer_dto.py  create_payment_dto.py  external_payment_data_dto.py  generic_notification_data.py  get_orders_filters_dto.py  patch_product_dto.py  (+3 more)
src/utils/: update_beanie_document_from_pydantic.py  validate_email.py
test/workflows/: temp.txt
(+87 files in other folders)
