[tool.poetry]
name = "tech-challenge-01"
version = "0.1.0"
description = "Tech Challenge Environment"
authors = ["joao.heusi <jmarcelo.heusi@gmail.com>"]
readme = "README.md"
packages = [{include = "tech_challenge_01"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.111.0"}
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
